--- a/newstyle.css
+++ b/newstyle.css
@@ -124,6 +124,14 @@ section .contact-me a:hover {
   scroll-snap-type: x mandatory;
   margin-left: 10px;
 }
+.video-container h2 {
+  margin: 0px;
+}
+.video-container p {
+  color: white;
+  font-size: 15px;
+  margin: 5px;
+}
 
 .video-container video {
   width: 300px;
