--- a/style.scss
+++ b/style.scss
@@ -248,7 +248,12 @@ header {
 
 /* --- Footer Section --- */
 footer {
-  // border-top: 2px solid #ffff;
+  margin-bottom: 20px;
+
+  .footer-links {
+    padding: 20px 0 0 0;
+  }
+
   hr {
     margin: 0;
   }
@@ -257,7 +262,7 @@ footer {
     display: flex;
     justify-content: center;
     background-color: $primary-color;
-    padding: 10px 0px 0px 0px;
+    padding: 10px 0px px 0px;
     margin: 0;
     list-style: none;
   }
@@ -284,6 +289,7 @@ footer {
 .footer-icons {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 10px 0;
   background-color: $primary-color;
 
@@ -293,5 +299,30 @@ footer {
     &:hover {
       color: $text-color;
     }
+  }
+}
+
+/* --- RESUME PAGE --- */
+.title-center {
+  text-align: center;
+  margin-top: 10px;
+
+  h1 {
+    color: $title-color;
+    font-size: 26px;
+    margin: 0;
+  }
+}
+.resume {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+
+  iframe {
+    width: 100%;
+    max-width: 100%;
+    height: 500px;
+    border: none;
+    border-radius: 8px;
   }
 }
