Fixing Resume Image Size

--- a/newstyle.css
+++ b/newstyle.css
@@ -285,12 +285,12 @@ footer a:hover {
   justify-content: center;
   padding: 20px;
 }
-.resume iframe {
-  width: 100%;
-  max-width: 100%;
-  height: 500px;
-  border: none;
+.resume img {
   border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 800px;
+  height: auto;
 }
 
 /*# sourceMappingURL=newstyle.css.map */
