--- a/style.scss
+++ b/style.scss
@@ -318,11 +318,11 @@ footer {
   justify-content: center;
   padding: 20px;
 
-  iframe {
-    width: 100%;
-    max-width: 100%;
-    height: 500px;
-    border: none;
+  img {
     border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 800px;
+    height: auto;
   }
 }
