--- a/newstyle.css
+++ b/newstyle.css
@@ -1,10 +1,8 @@
 /* --- GLOBAL STYLES --- */
-body,
-html {
-  height: 100%;
-  width: 100%;
+html,
+body {
   margin: 0;
-  overflow-x: hidden;
+  padding: 0;
 }
 
 * {
@@ -55,7 +53,7 @@ header a:hover {
   width: 100%;
 }
 .hero-container img {
-  width: 130%;
+  width: 100%;
   height: auto;
   display: block;
 }
