--- a/newstyle.css
+++ b/newstyle.css
@@ -282,7 +282,7 @@ footer a:hover {
 /* --- RESUME PAGE --- */
 .title-center {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 .title-center h1 {
   color: #1f2933;
@@ -294,6 +294,7 @@ footer a:hover {
   display: flex;
   justify-content: center;
   padding: 20px;
+  margin-bottom: 30px;
 }
 .resume img {
   border-radius: 8px;
