--- a/style.scss
+++ b/style.scss
@@ -319,7 +319,7 @@ footer {
 /* --- RESUME PAGE --- */
 .title-center {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 30px;
 
   h1 {
     color: $primary-text;
@@ -331,6 +331,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 20px;
+  margin-bottom: 30px;
 
   img {
     border-radius: 8px;
