--- a/newstyle.css
+++ b/newstyle.css
@@ -356,9 +356,20 @@ footer a:hover {
   margin: 0;
 }
 
-input[type=text],
-select,
-textarea {
+/* Form color and design */
+.container {
+  display: block;
+  gap: 20px;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 30px;
+}
+.container img {
+  margin-bottom: 15px;
+}
+.container input[type=text],
+.container select,
+.container textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -368,9 +379,12 @@ textarea {
   margin-bottom: 16px;
   resize: vertical; /* Allow the user to vertically resize the textarea */
 }
-
-/* Submit button */
-input[type=submit] {
+.container {
+  /* Submit button */
+}
+.container input[type=submit] {
+  display: block;
+  margin: 20px auto 0;
   background-color: #2563eb;
   color: #ffffff;
   padding: 12px 20px;
@@ -378,19 +392,112 @@ input[type=submit] {
   border-radius: 4px;
   cursor: pointer;
 }
-
-input[type=submit]:hover {
+.container input[type=submit]:hover {
   background-color: #dbe9ee;
   color: #ffffff;
 }
 
-/* Form color and design */
-.container {
-  display: flex;
-  gap: 20px;
-  border-radius: 5px;
-  padding: 20px;
-  margin-bottom: 30px;
+/* -----------------------------------------------------*/
+/* --- BREAKPOINTS/RESPONSIVNESS --- */
+@media (min-width: 800px) {
+  /* -------- HOMEPAGE --------*/
+  /* --- Navigation Bar --- */
+  header {
+    padding: 20px 0;
+    background-color: #e5e7eb;
+  }
+  header li {
+    font-size: 16px;
+  }
+  /* hero section */
+  .hero-container {
+    position: relative;
+    width: 100%;
+  }
+  .hero-container img {
+    width: 100%;
+    height: 100%;
+    max-height: 800px;
+    object-fit: cover;
+  }
+  /* --- About Me Section --- */
+  .about-container {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 80px;
+  }
+  .about-container .about-me {
+    padding: 0;
+  }
+  .about-container .about-me h2 {
+    font-size: 40px;
+  }
+  .about-container .about-me p {
+    font-size: 26px;
+    margin: 0;
+    color: #4b5563;
+  }
+  /* --- Projects Section --- */
+  .projects-container h4 {
+    font-size: 28px;
+  }
+  .projects-container h1 {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+  .video-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .video-container h2 {
+    font-size: 28px;
+  }
+  .video-container p {
+    font-size: 18px;
+  }
+  .video-container a {
+    font-size: 18px;
+  }
+  .video-container video {
+    width: 600px;
+  }
+  /* --- Learning More Section --- */
+  .learning {
+    padding: 80px 0px 80px 0px;
+  }
+  .learning h1 {
+    font-size: 40px;
+  }
+  .learning a {
+    font-size: 26px;
+  }
+  /* --- Tech Stack Section --- */
+  .tech-stack {
+    padding: 80px;
+  }
+  .tech-stack h2 {
+    font-size: 28px;
+  }
+  .tech-stack h4 {
+    font-size: 36px;
+  }
+  /* */
+  /* Form color and design */
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+  .container form {
+    max-width: 500px;
+  }
+  .container img {
+    height: 600px;
+    margin-bottom: 15px;
+    max-width: 800px;
+    object-fit: cover;
+    object-position: left;
+  }
 }
 
 /*# sourceMappingURL=newstyle.css.map */
